--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
